# beer-analytics

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  manage  manage.py  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yaml
beer_analytics/: .env.example  __init__.py  asgi.py  settings.py  settings_dev.py  settings_prod.py  settings_shared.py  urls.py  wsgi.py
config/: .env.example  asgi.py  settings.py  settings_dev.py  settings_prod.py  settings_shared.py  urls.py  wsgi.py
error_pages/: 404.html
recipe_db/: analytics.py  apps.py  formulas.py  loader.py  mapping.py  models.py  tests.py  utils.py
recipe_db/analytics/: __init__.py  analysis.py  fermentable.py  hop.py  recipe.py  scope.py  style.py  utils.py  yeast.py
recipe_db/data/: fermentables.csv  flavors.csv  hops.csv  hops.xlsx  hops_aroma.json  malts.csv  styles-bjcp2015.csv  styles.csv  styles.xlsx  yeasts.csv
recipe_db/etl/: loader.py  mapping.py  tests.py
recipe_db/format/: beersmith.py  beerxml.py  mmum.py  parser.py  tests.py
recipe_db/migrations/: 0001_initial.py  0002_hop_pairings_alter_hop_substitutes.py  0003_ignoredhop.py  0004_alter_fermentable_alt_names_extra_and_more.py  0005_sourceinfo.py  0006_recipe_associated_fermentables_and_more.py  0007_recipe_recipe_db_r_ibu_059edb_idx_and_more.py  0008_recipe_recipe_db_r_created_b37299_idx.py  0009_fermentable_search_popularity_hop_search_popularity_and_more.py  0010_remove_hop_pairings_hoppairing.py  0011_bjcp2021.py  0012_style_bjcp_url.py  0013_recipe_style_oor.py  0014_style_color_style_conditioning_style_era_and_more.py  0015_searchindexupdatequeue.py
recipe_db/search/: elasticsearch.py  recipe_index.py  result.py  signals.py
web_app/: __init__.py  apps.py  charts.py  meta.py  plot.py  urls.py  views.py
web_app/charts/: admin.py  analyze.py  fermentable.py  home.py  hop.py  style.py  trend.py  utils.py  yeast.py
web_app/templates/: about.html  analyze.html  base.html  base_admin.html  filters.html  imprint.html  index.html  legal.html  meta.html  privacy_policy.html  random_recipes.html  search.html  sitemap.xml  updates.html
web_app/templatetags/: style_extras.py  web_app.py
web_app/views/: admin.py  analyze.py  fermentable.py  hop.py  hop_comparison.py  hop_flavor.py  misc.py  search.py  style.py  trend.py  (+2 more)
(+1471 files in other folders)
